Fixing bug 418755. Revert our decision to throw WRONG_DOCUMENT_ERR per the DOM spec as the web expects that not to happen. r+sr=jonas@sickin.cc