content/base/src/nsDOMAttributeMap.cpp
@@ -42,8 +42,10 @@
 
 #include "nsDOMAttributeMap.h"
 #include "nsDOMAttribute.h"
+#include "nsIDOM3Document.h"
 #include "nsGenericElement.h"
 #include "nsIContent.h"
+#include "nsIDocument.h"
 #include "nsINameSpaceManager.h"
 #include "nsDOMError.h"
 #include "nsContentUtils.h"
@@ -271,7 +273,15 @@ nsDOMAttributeMap::SetNamedItemInternal(nsIDOMNode *aNode,
     }
 
     if (!mContent->HasSameOwnerDoc(iAttribute)) {
-      return NS_ERROR_DOM_WRONG_DOCUMENT_ERR;
+      nsCOMPtr<nsIDOM3Document> domDoc =
+        do_QueryInterface(mContent->GetOwnerDoc(), &rv);
+      NS_ENSURE_SUCCESS(rv, rv);
+
+      nsCOMPtr<nsIDOMNode> adoptedNode;
+      rv = domDoc->AdoptNode(aNode, getter_AddRefs(adoptedNode));
+      NS_ENSURE_SUCCESS(rv, rv);
+
+      NS_ASSERTION(adoptedNode == aNode, "Uh, adopt node changed nodes?");
     }
 
     // Get nodeinfo and preexisting attribute (if it exists)
